<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/statusTitle"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/change_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusBody"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/change_status_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/BottomContainer"
            app:layout_constraintTop_toBottomOf="@id/statusBody">

            <TextView
                android:id="@+id/futureStatusTitleTop"
                style="@style/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/future_status_subtitle_1"
                app:layout_constraintBottom_toTopOf="@+id/futureStausImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/futureStausImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/not_infected_big"
                app:layout_constraintBottom_toTopOf="@+id/futureStatusTitleBottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/futureStatusTitleTop" />


            <TextView
                android:id="@+id/currentStatusText"
                style="@style/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/not_infected"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/futureStausImage"
                app:layout_constraintStart_toEndOf="@id/futureStausImage"
                app:layout_constraintTop_toTopOf="@id/futureStausImage" />

            <TextView
                android:id="@+id/futureStatusTitleBottom"
                style="@style/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/future_status_subtitle_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/futureStausImage"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/BottomContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/changeStatusReminderText"
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_status_reminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"
                tools:visibility="visible"/>

            <Button
                android:id="@+id/changeStatusButton"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_lives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
