<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".status.StatusActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/statusTitle"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusBody"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/status_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusTitle" />

        <ImageView
            android:id="@+id/notInfectedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/not_infected_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusBody" />

        <TextView
            android:id="@+id/notInfectedText"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/not_infected"
            app:layout_constraintStart_toEndOf="@id/notInfectedImage"
            app:layout_constraintTop_toTopOf="@id/notInfectedImage" />

        <ImageView
            android:id="@+id/infectedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/infected_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notInfectedImage" />

        <TextView
            android:id="@+id/infectedText"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/infected_text"
            app:layout_constraintStart_toEndOf="@id/infectedImage"
            app:layout_constraintTop_toTopOf="@id/infectedImage" />

        <ImageView
            android:id="@+id/maybeInfectedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/maybe_infected_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infectedImage" />

        <TextView
            android:id="@+id/maybeInfectedText"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/maybe_infected"
            app:layout_constraintStart_toEndOf="@id/maybeInfectedImage"
            app:layout_constraintTop_toTopOf="@id/maybeInfectedImage" />

        <ImageView
            android:id="@+id/currentStausImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/not_infected_big"
            app:layout_constraintBottom_toTopOf="@+id/positiveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maybeInfectedImage"/>

        <TextView
            android:id="@+id/currentStatusText"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/not_infected"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/currentStausImage"
            app:layout_constraintStart_toEndOf="@id/currentStausImage"
            app:layout_constraintTop_toTopOf="@id/currentStausImage" />

        <Button
            android:id="@+id/positiveButton"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/test_positive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

